fixed 2019.JPG name & homepage art tile clicking

--- a/design.html
+++ b/design.html
@@ -69,7 +69,7 @@
             <img src="design%20tiles/classics.jpg" alt="Classic Drinks Poster" class="thumbnail" id="classics_thumb">
         </div>
         <div class="right_container"
-             onclick="display_image('2019_modal', '2019_thumb', '2019_img', 'design/2019.jpg')">
+             onclick="display_image('2019_modal', '2019_thumb', '2019_img', 'design/2019.JPG')">
             <img src="design%20tiles/2019.jpg" alt="Class of 2019 Grad Gift" class="thumbnail" id="2019_thumb">
         </div>
 
