--- a/index.html
+++ b/index.html
@@ -97,12 +97,14 @@
                 </div>
             </div>
         </a>
-        <div class="right_container">
-            <img src="tiles/easel.jpg" alt="Artworks" class="image">
-            <div class="overlay">
-                <img src="tiles/dark%20easel.jpg" class="hover_img">
+        <a href="art.html">
+            <div class="right_container">
+                <img src="tiles/easel.jpg" alt="Artworks" class="image">
+                <div class="overlay">
+                    <img src="tiles/dark%20easel.jpg" class="hover_img">
+                </div>
             </div>
-        </div>
+        </a>
     </div>
 
 </body>
